tests/fixtures/syntax/invalid/document_file_write_step.repor
# Execution constructs are not part of the document block grammar, so a
# write step inside a document block fails at parse time.
document file {
  write <"out.txt"> "value"
}

case "case after write inside document block" {
  $ true
  assert {
    exit 0
  }
}
